--- a/app/src/main/res/layout/play_list.xml
+++ b/app/src/main/res/layout/play_list.xml
@@ -8,7 +8,7 @@
     android:background="@color/cardview_shadow_start_color">
 
     <Button
-        android:id="@+id/TestButton"
+        android:id="@+id/test_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="45dp"
