--- a/app/src/main/res/layout/music_list_layout.xml
+++ b/app/src/main/res/layout/music_list_layout.xml
@@ -2,40 +2,53 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
         android:id="@+id/music_list_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/music_title_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="MusicTitle"
-            android:textColor="@color/white" />
+        <ImageView
+            android:id="@+id/album_image_view"
+            android:layout_width="81dp"
+            android:layout_height="70dp"
+            app:srcCompat="@android:drawable/ic_menu_gallery"
+            tools:srcCompat="@android:drawable/ic_menu_gallery" />
 
-        <TextView
-            android:id="@+id/artist_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Artist"
-            android:textColor="@color/white" />
+        <LinearLayout
+            android:layout_width="312dp"
+            android:layout_height="71dp"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/duration_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Duration"
-            android:textColor="@color/white" />
+            <TextView
+                android:id="@+id/music_title_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="MusicTitle"
+                android:textColor="@color/white" />
+
+            <TextView
+                android:id="@+id/artist_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Artist"
+                android:textColor="@color/white" />
+
+            <TextView
+                android:id="@+id/duration_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Duration"
+                android:textColor="@color/white" />
+
+        </LinearLayout>
 
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
